# automaton

./: Cargo.toml  README.md
auto_cellular/: Cargo.toml  README.md
auto_cellular/src/: cell.rs  common.rs  space.rs  world.rs
auto_runner/: Cargo.toml  index.js
auto_runner/src/: gui.rs  lib.rs  main.rs  terminal.rs  web.rs
auto_spaces/: Cargo.toml  index.js
auto_spaces/src/: cursive_canvas.rs  lib.rs  sdl2_canvas.rs  wasm_canvas.rs
auto_worlds/: Cargo.toml
auto_worlds/src/: briansbrain.rs  gameoflife.rs  langtonsant.rs  lib.rs
automaton_runner/: Cargo.toml  index.html  index.js
automaton_runner/src/: gui.rs  lib.rs  main.rs  terminal.rs  web.rs  worlds.rs
briansbrain/: Cargo.toml
briansbrain/src/: cell.rs  game.rs  gui.rs  lib.rs  main.rs  world.rs
cellular_automaton/: Cargo.toml
cellular_automaton/src/: cell.rs  common.rs  lib.rs  space.rs  world.rs
gameoflife/: Cargo.toml  index.html  index.js
gameoflife/src/: cell.rs  game.rs  gui.rs  lib.rs  main.rs  terminal.rs  web.rs  world.rs
langtonsant/: Cargo.toml
langtonsant/src/: cell.rs  world.rs
spaces/: Cargo.toml  index.js
spaces/src/: common.rs  curisive_canvas.rs  cursive_canvas.rs  lib.rs  sdl2_canvas.rs  sdl_canvas.rs  wasm_canvas.rs
worlds/: Cargo.toml
worlds/src/: briansbrain.rs  gameoflife.rs  langtonsant.rs
