[package]
authors = ["Fady Adal <fady@uchicago.edu>"]
edition = "2021"
name = "auto_runner"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_cellular = {path = "../auto_cellular"}
auto_spaces = {path = "../auto_spaces"}
auto_worlds = {path = "../auto_worlds"}
clap = {version = "3.2.15", features = ["derive"], optional = true}
cursive = {version = "0.19.0", optional = true}
rand = "0.8.5"
sdl2 = {version = "0.35.2", optional = true}
wasm-bindgen = {version = "0.2.82", optional = true}

[features]
cursive = ["dep:cursive", "dep:clap", "auto_spaces/cursive"]
sdl2 = ["dep:sdl2", "dep:clap", "auto_spaces/sdl2"]
wasm = ["dep:wasm-bindgen", "auto_spaces/wasm"]
