[package]
description = "Spaces where worlds are able to be rendered"
edition = "2021"
license = "MIT"
name = "auto_spaces"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_cellular = {git = "https://github.com/fadyadal/automaton"}
cursive = {version = "0.19.0", optional = true}
getrandom = "0.2.7"
rand = "0.8.5"
sdl2 = {version = "0.35.2", optional = true}
wasm-bindgen = {version = "0.2.81", optional = true}

[features]
cursive = ["dep:cursive"]
sdl2 = ["dep:sdl2"]
wasm = ["dep:wasm-bindgen", "getrandom/js"]
