[package]
authors = ["Fady Adal <fady@uchicago.edu>"]
edition = "2021"
name = "automaton_runner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
briansbrain = {path = "../briansbrain"}
cellular_automaton = {path = "../cellular_automaton"}
clap = {version = "3.2.15", features = ["derive"]}
cursive = {version = "0.19.0", optional = true}
gameoflife = {path = "../gameoflife"}
rand = "0.8.5"
sdl2 = {version = "0.35.2", optional = true}
spaces = {path = "../spaces"}

[features]
all = ["cursive", "sdl2"]
cursive = ["dep:cursive", "spaces/cursive"]
default = ["cursive"]
sdl2 = ["dep:sdl2", "spaces/sdl2"]
