[package]
authors = ["Fady Adal <fady@uchicago.edu>"]
edition = "2021"
name = "automaton_runner"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cellular_automaton = {path = "../cellular_automaton"}
clap = {version = "3.2.15", features = ["derive"], optional = true}
cursive = {version = "0.19.0", optional = true}
rand = "0.8.5"
sdl2 = {version = "0.35.2", optional = true}
spaces = {path = "../spaces"}
wasm-bindgen = {version = "0.2.82", optional = true}
worlds = {path = "../worlds"}

[features]
cursive = ["dep:cursive", "dep:clap", "spaces/cursive"]
sdl2 = ["dep:sdl2", "dep:clap", "spaces/sdl2"]
wasm = ["dep:wasm-bindgen", "spaces/wasm"]
