[package]
edition = "2021"
name = "briansbrain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cellular_automaton = {path = "../cellular_automaton"}
itertools = "0.10.3"
rand = "0.8.5"
sdl2 = {version = "0.35.2", optional = true}
