[package]
edition = "2021"
name = "spaces"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cellular_automaton = {path = "../cellular_automaton"}
cursive = {version = "0.19.0", optional = true}
getrandom = "0.2.7"
itertools = "0.10.3"
rand = "0.8.5"
sdl2 = {version = "0.35.2", optional = true}
wasm-bindgen = {version = "0.2.81", optional = true}

[features]
cursive = ["dep:cursive"]
sdl2 = ["dep:sdl2"]
wasm = ["dep:wasm-bindgen", "getrandom/js"]
